<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.example.utsoft.demo.activity.MainActivity">
    <Button
        android:id="@+id/btn_okhttp_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_okhttp_mainActivity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_eventBus_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_eventBus_mainActivity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_retrofit_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_retrofit_mainActivity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_glide_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_glidetest_mainActivity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_tab_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_tab_mainActivity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_reclerview_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_recycler_mainActivity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_greendao_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_greendao_mainActivity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_mpa_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_mpa_mainActivity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_jcvp_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_jcvp_mainActivity"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_realm_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_realm_mainActivity"
        android:textAllCaps="false"/>
</LinearLayout>
</ScrollView>