<?xml version="1.0" encoding="utf-8"?>
<!-- 此处布局使用于GreenDaoActivity 和 RealmActivity-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_green_dao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.utsoft.demo.activity.GreenDaoActivity">

    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_query_greenDaoActivity"
        />
    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update_greenDaoActivity"
        />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete_greenDaoActivity"
        />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add__greenDaoActivity"
        />
    <TextView
        android:id="@+id/tv_greenDao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"/>
</LinearLayout>
